RESOLVED FIXED61101
Plug-ins at YouTube, cnn.com, nytimes vanish when their top/left is scrolled out of view when zoomed
https://bugs.webkit.org/show_bug.cgi?id=61101
Summary Plug-ins at YouTube, cnn.com, nytimes vanish when their top/left is scrolled ...
Chris Marrin
Reported 2011-05-18 18:09:40 PDT
From rdar://problem/9029160 * STEPS TO REPRODUCE 1. Navigate to <http://cnn.com/> 2. Notice plug-in ad on top right 3. Zoom in to 2x 4. Start scrolling down * RESULTS Ad disappears as soon as its top half is out of view.
Attachments
Patch (3.28 KB, patch)
2011-05-18 18:14 PDT, Chris Marrin
andersca: review+
Chris Marrin
Comment 1 2011-05-18 18:14:24 PDT
Chris Marrin
Comment 2 2011-05-19 10:17:40 PDT
Note You need to log in before you can comment on or make changes to this bug.