2011-05-18  Chris Marrin  <cmarrin@apple.com>

Reviewed by Anders Carlsson.

        Plug-ins at YouTube, cnn.com, nytimes vanish when their top/left is scrolled out of view when zoomed
        https://bugs.webkit.org/show_bug.cgi?id=61101

        Scale both bounding boxes sent to m_plugin->geometryDidChange(), not just the frameRect. This fools
        the plugin into thinking it is drawing into an unscaled box with an unscaled view even when scaled.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::frame):Made this const so it can be used in clipRectInWindowCoordinates()
        (WebKit::PluginView::viewGeometryDidChange):Used IntRect::scale() rather than scaling by hand
        (WebKit::PluginView::clipRectInWindowCoordinates):Added scale of clipRect.
        * WebProcess/Plugins/PluginView.h:


Canonical link: https://commits.webkit.org/76492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86851 268f45cc-cd09-0410-ab3c-d52691b4dbfc